<resources>
    <string name="app_name">Lembrei</string>
    <string name="hint_title">Título</string>
    <string name="hint_description">Do que você quer lembrar?</string>
    <string name="delete">Excluir</string>
    <string name="save">Salvar</string>
    <string name="all">Todos</string>
    <string name="today">Hoje</string>
    <string name="priorities">Prioridades</string>
    <string name="done">Concluídos</string>
    <string name="add_button">Add button</string>
    <string name="starred_button">Starred Button</string>
    <string name="priority">Prioridade</string>
    <string name="loading_error_message">Falha ao carregar o lembrete</string>
    <string name="empty_reminder_message">O lembrete não pode estar vazio</string>
    <string name="delete_completed_message">Lembretes concluídos foram deletados</string>
    <string name="clear_completed">Deletar concluídos</string>
    <string name="clear_all_message">Todos os lembretes foram deletados</string>
    <string name="clear_all">Deletar todos</string>
</resources>