<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ReminderFragment">
    <data>
        <variable
            name="reminderViewModel"
            type="com.michaelpessoni.lembrei.viewmodels.ReminderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:singleLine="true"
            app:singleSelection="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp">
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                style="@style/Widget.Material3.Chip.Filter"
                android:checked="true"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today"
                style="@style/Widget.Material3.Chip.Filter"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_starred"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priorities"
                style="@style/Widget.Material3.Chip.Filter"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done"
                style="@style/Widget.Material3.Chip.Filter"
                />
        </com.google.android.material.chip.ChipGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reminder_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_group"
            android:layout_margin="16dp"
            tools:listitem="@layout/reminder_item"
            tools:itemCount="10"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_calendar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="16dp"
            android:contentDescription="@string/add_button"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>